--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="bottom-container">
           <div class="footers">
-            <a class="footer-link" href="www.linkedin.com/in/amit-metkari">LinkedIn</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/amit-metkari/">LinkedIn</a>
             <a class="footer-link" href="https://github.com/amitsmetkari">Github</a>
             <a class="footer-link" href="#">Website</a>
             <p class="copyright">© 2021 Amit Metkari</p>
